# picologs

./: .env.example  .env.production  .gitignore  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  TESTING.md  TESTING_REPORT.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  scrape_fleetyards.ps1  svelte.config.js  tailwind.config.js  update-fleet-data.js  vitest.browser.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: build-and-sign.yml
lib/: ships-without-identifier.ts
scripts/: README.md  cache-fleet-images.js
secrets/: picologs.key  picologs.key.pub
src/: app.css  app.html  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddFriend.svelte  Avatar.svelte  Friends.svelte  Friends.svelte.test.ts  Groups.svelte  Header.svelte  Iframe.svelte  Item.svelte  Item.svelte.test.ts  NotificationToasts.svelte  PendingFriendRequests.svelte  Resizer.svelte  Skeleton.svelte  SubNav.svelte  Timeline.svelte  TimelineFilters.svelte  User.svelte  VerticalResizer.svelte  WebSocketConnector.svelte  WebsiteIframe.svelte
src/lib/: api.test.ts  api.ts  appContext.svelte.ts  avatarUtils.ts  cache.test.ts  cache.ts  compression.test.ts  compression.ts  discord-colors.ts  merge.test.ts  merge.ts  oauth.test.ts  oauth.ts  regex-utils.test.ts  regex-utils.ts  storage.integration.test.ts  storage.test.ts  storage.ts  validation.test.ts  (+3 more)
static/: reset.css  style.css
(+17 files in other folders)
